// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram anchor 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram basic 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram color 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#7D4CDB"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram offset 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 6,6 Q 6,6 6,6 T 6,6"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 12,12 Q 12,12 12,12 T 12,12"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 24,24 Q 24,24 24,24 T 24,24"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram thickness 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="3"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="6"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="12"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="24"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="5"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram type 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 L 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 L 0,0 L 0,0 L 0,0"
            fill="none"
            stroke="#6FFFB0"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
